# lib/api-spec/openapi.yaml
@@ -72,10 +72,14 @@ components:
         color:
           type: string
           minLength: 1
+        gender:
+          type: string
+          enum: [female, male]
       required:
         - imageData
         - style
         - color
+        - gender
     TryOnResult:
       type: object
       properties:
